--- a/edificapro/style.css
+++ b/edificapro/style.css
@@ -39,6 +39,7 @@ p {
     left: 0;
     width: 100%;
     z-index: 2;
+    background-color: white;
 }
 .nav-link:hover {
     color: var(--green);
@@ -123,7 +124,7 @@ video {
     border-radius: 5px;
     border: none;
 }
-.video-btn {
+.video-btn.play {
     position: absolute;
     color: white;
     border: none;
@@ -144,6 +145,17 @@ video {
     display: grid;
     place-content: center;
     z-index: 1;
+}
+.video-btn.pause {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    border: none;
+    z-index: 2;
 }
 .video-btn i{
     margin-left: .5rem;
@@ -183,4 +195,62 @@ video {
 }
 .card .card-body .card-text {
     margin-top: 1.5rem;
+}
+
+
+/* ABOUT */
+.about {
+    /* min-height: 94vh; */
+    margin-bottom: 10rem;
+}
+.about__main {
+    gap: 10rem;
+}
+.section__title {
+    font-size: 4rem;
+    font-weight: 600;
+    margin-bottom: 3rem;
+}
+
+.about__titles {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+}
+.about__btn {
+    display: block;
+    padding: 1rem 3rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid black;
+    transition: all .2s ease-in-out;
+    opacity: .4;
+}
+.about__btn:hover {
+    color: var(--green);
+    border-color: var(--green);
+    opacity: 1;
+}
+.about__btn:focus,
+.about__btn.active {
+    opacity: 1;
+}
+.about__texts .text {
+    display: none;
+}
+.about__texts .text.active {
+    display: flex;
+}
+
+.about__content {
+    flex: 40%;
+}
+.about__images {
+    flex: 30%;
+}
+.about__images img {
+    border-radius: 10px
 }
