--- a/edificapro/style.css
+++ b/edificapro/style.css
@@ -294,3 +294,67 @@ video {
 .carousel-control-next:focus .carousel-control-next-icon {
     background-image: url(./img/arrow-right-solid.svg);
 }
+
+
+/* PROJECTS */
+section .btn {
+    padding: .5rem 3rem;
+}
+.projects {
+    margin-bottom: 10rem;
+}
+.projects__card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20%;
+    position: relative;
+}
+.projects__img {
+    flex: 35%;
+}
+.projects__img img {
+    border-radius: 10px;
+}
+.projects__content {
+    flex: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2rem;
+}
+.projects__title {
+    font-size: 3rem;
+    font-weight: 600;
+}
+.projects__card::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-content: center;
+    font-size: 30rem;
+    font-weight: bold;
+    color: #f8f8f8;
+    letter-spacing: 2rem;
+    z-index: -1;
+}
+.projects__card:nth-of-type(2) .projects__img {
+    order: 1;
+}
+.projects__card:nth-of-type(2) .projects__content {
+    align-items: end;
+    text-align: right;
+}
+.projects__card:nth-of-type(1)::before {
+    content: '01';
+}
+.projects__card:nth-of-type(2)::before {
+    content: '02';
+}
+.projects__card:nth-of-type(3)::before {
+    content: '03';
+}
