--- a/undersound/style.css
+++ b/undersound/style.css
@@ -120,3 +120,13 @@ header {
     border-top-right-radius: 999px;
     background: url(./img/hero-person2.png) no-repeat center/90%, var(--orange);
 }
+.hero-img .hero-img__container:last-of-type::after {
+    content: '';
+    display: block;
+    width: 50rem;
+    height: 10rem;
+    background: url(./img/title-svg-sound-wave.png) no-repeat center/60%;
+    position: absolute;
+    bottom: 5rem;
+    right: -30rem;
+}
